syntax = "proto3";

package proto;

option go_package = "github.com/eternalApril/Coffee-house/proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrderStatus(GetOrderStatusRequest) returns (GetOrderStatusResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  string item = 2;
  int32 quantity = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
  string error = 3;
}

message GetOrderStatusRequest {
  string order_id = 1;
}

message GetOrderStatusResponse {
  string status = 1;
  string error = 2;
}